--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "konva": "^9.3.18",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.0"
   }
 }
